--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Time, Space, Complexity</h1>
+	<p>Time complexity, efficient. Time Complexity helps you pick the approach that doesn’t just work, and efficient but works well when the party gets bigger.</p>
+    <p><b>Space Complexity</b>describes how much extra memory your program needs. Whereas O(n) the worst-case complexity might be O(n), where n is the number of elements.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
